--- a/CloudEnjoy/CloudEnjoy/Modules/Login/View/LSPhoneLoginView.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Login/View/LSPhoneLoginView.xib
@@ -23,7 +23,7 @@
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DDw-bT-ZHi">
                             <rect key="frame" x="50" y="12" width="265" height="19"/>
                             <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="13"/>
-                            <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
+                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
