--- a/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSRejectProjectViewController.xib
+++ b/CloudEnjoy/CloudEnjoy/Modules/Home/Home/LSRejectProjectViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSRejectProjectViewController" customModule="CloudEnjoy" customModuleProvider="target">
             <connections>
                 <outlet property="bedNameLab" destination="WC4-UY-0Pu" id="FFU-Gk-CZY"/>
+                <outlet property="bedTitle" destination="Kkj-ru-zDZ" id="dLk-vY-BAb"/>
                 <outlet property="clockDurationLab" destination="JyT-C3-94C" id="diG-EG-n1B"/>
                 <outlet property="clockDurationView" destination="GRg-bl-efN" id="dmQ-Ro-kOG"/>
                 <outlet property="clockTypeLab" destination="4UO-mE-0jE" id="ACE-wr-X8C"/>
@@ -385,7 +386,7 @@
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="取消预约">
+                    <state key="normal" title="取消">
                         <color key="titleColor" red="0.17254901959999999" green="0.72156862749999995" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -412,7 +413,7 @@
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="编辑">
+                    <state key="normal" title="确认">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
