--- a/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
+++ b/CloudEnjoy/CloudEnjoy/Modules/Alert/AlertStoryboard.storyboard
@@ -93,8 +93,8 @@
                                             <constraint firstAttribute="height" constant="1" id="Nsu-of-WtV"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是否开启语音播报" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnk-oW-Xbr">
-                                        <rect key="frame" x="5.6666666666666714" y="12.666666666666673" width="112" height="19.666666666666671"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每天播报次数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnk-oW-Xbr">
+                                        <rect key="frame" x="5.6666666666666714" y="12.666666666666673" width="84" height="19.666666666666671"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
